--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 *.swp
 *.swo
+c.out
 vendor
 merkleeyes.db
 build
 docs/guide/*.sh
 tools/bin/*
 examples/build/*
-examples/basecoin/glide.lock
 examples/basecoin/app/data
 baseapp/data/*
 docs/_build
